--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ license = "AGPL-3.0-or-later"
 anyhow = "1.0"
 chrono = "0.4"
 mediawiki = "0.2.6"
-parsoid = "0.4.1"
+parsoid = "0.5.0-alpha.1"
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
 tokio = {version = "1", features = ["full"]}
