--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ license = "AGPL-3.0-or-later"
 [dependencies]
 anyhow = "1.0"
 chrono = "0.4"
+dirs-next = "2"
 mediawiki = "0.2.6"
 parsoid = "0.5.0-alpha.1"
 serde = {version = "1", features = ["derive"]}
