--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ license = "AGPL-3.0-or-later"
 anyhow = "1.0"
 chrono = "0.4"
 dirs-next = "2"
+flexi_logger = {version = "0.17.1", default-features = false}
+log = "0.4"
 mediawiki = "0.2.6"
 parsoid = "0.5.0-alpha.1"
 serde = {version = "1", features = ["derive"]}
