--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ dirs-next = "2"
 flexi_logger = {version = "0.17.1", default-features = false}
 log = "0.4"
 mediawiki = "0.2.6"
-parsoid = "0.5.0-alpha.1"
+parsoid = "0.5.0"
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
 tokio = {version = "1", features = ["full"]}
