--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,8 @@ license = "AGPL-3.0-or-later"
 [dependencies]
 anyhow = "1.0"
 chrono = "0.4"
-dirs-next = "2"
 flexi_logger = {version = "0.17.1", default-features = false}
 log = "0.4"
-mediawiki = "0.2.6"
-parsoid = "0.5.0"
-serde = {version = "1", features = ["derive"]}
-serde_json = "1"
+mwapi_responses = "0.2.2"
+mwbot = "0.3.0"
 tokio = {version = "1", features = ["full"]}
-toml = "0.5"
